--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,7 +66,7 @@
   </main>
 
 <script>
-const API_BASE = "http://localhost:8000"; // same origin
+const API_BASE = "https://scholarship-scorecard.onrender.com"
 let CONFIG = null;
 
 async function loadConfig() {
