--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,6 +68,7 @@
 <script>
 const API_BASE = "https://scholarship-scorecard.onrender.com"
 let CONFIG = null;
+  <script>
 
 async function loadConfig() {
   const res = await fetch(API_BASE + "/api/config");
